syntax = "proto3";
package login;

message AuthenticationForm {
    string username = 1;
    string password = 2;
}

message AuthenticationResponse {
    string token = 1;
}

service Login {
    rpc Login(AuthenticationForm) returns (AuthenticationResponse) {};
}